# Hawker_Boys

./: .env.example  .gitignore  LICENSE  Makefile  README.md
backend/: alembic.ini  pyproject.toml  setup.cfg
backend/scripts/: preflight.py  seed_data.py
backend/tests/: test_health.py
backend/tms/: main.py  settings.py
backend/tms/api/: dependencies.py  main.py  routers.py  routes.py  utils.py
backend/tms/api/routes/: __init__.py  attendance.py  class_runs.py  courses.py  enrollments.py  learners.py
backend/tms/api/v1/: assessments.py  attendance.py  audit.py  auth.py  certificates.py  class_runs.py  courses.py  enrollments.py  learners.py  ssg.py
backend/tms/auth/: authz.py  security.py
backend/tms/domain/: __init__.py  audit.py  models.py  services.py
backend/tms/infra/: __init__.py  bootstrap.py  config.py  database.py  logging.py
backend/tms/jobs/: __init__.py  queue.py  ssg.py  ssg_sync.py
backend/tms/migrations/: env.py
backend/tms/migrations/versions/: 0001_initial.py
backend/tms/schemas/: __init__.py  assessment.py  attendance.py  audit.py  certificate.py  class_run.py  course.py  enrollment.py  learner.py  pagination.py  types.py  user.py
backend/tms/scripts/: preflight.py  seed.py
backend/tms/ssg_client/: __init__.py  client.py  models.py
backend/tms/ssg_client/endpoints/: __init__.py  attendance.py  claims.py  class_run.py  class_runs.py  course.py  courses.py  enrollment.py
docs/: API_MAP.md  ARCHITECTURE.md  BRANDING-NOTES.md  DATA_MODEL.md  ERD.md  README.md  REQUIREMENTS_TPG.md  ROLE_MATRIX.md  SECURITY-PDPA.md  SSG-Error-Catalog.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  copy.ts  main.tsx  styles.css
frontend/src/components/: AppShell.tsx  Drawer.tsx  EmptyState.tsx  ErrorState.tsx  FormField.tsx  LoadingState.tsx  PaginationControls.tsx  StatusBadge.tsx
frontend/src/context/: AuthContext.tsx  ToastContext.tsx
frontend/src/hooks/: useDebounce.ts
frontend/src/lib/: api.ts  authStorage.ts
frontend/src/pages/: Attendance.tsx  ClassRuns.tsx  Courses.tsx  Dashboard.tsx  Enrollments.tsx  Learners.tsx  Login.tsx  Settings.tsx  SyncStatus.tsx
frontend/src/theme/: ThemeProvider.tsx  tokens.css
frontend/src/types/: api.ts
hb-portal/: middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
hb-portal/Hawkerboyslogos/: Branding Guide.docx
hb-portal/app/: layout.tsx  page.tsx
hb-portal/app/(auth)/login/: page.tsx
hb-portal/app/(protected)/: layout.tsx
hb-portal/app/(protected)/admin/: page.tsx
hb-portal/app/(protected)/announcements/: page.tsx
hb-portal/app/(protected)/badges/: page.tsx
hb-portal/app/(protected)/dashboard/: page.tsx
hb-portal/app/(protected)/help/: page.tsx
hb-portal/app/(protected)/messages/: page.tsx
hb-portal/app/(protected)/progress/: page.tsx
hb-portal/app/(protected)/quests/: page.tsx
hb-portal/app/(protected)/schedule/: page.tsx
hb-portal/app/(protected)/uploads/: page.tsx
hb-portal/app/(public)/: page.tsx
hb-portal/app/admin/announcements/: page.tsx
hb-portal/app/announcements/: page.tsx
hb-portal/app/api/announcements/: route.ts
hb-portal/app/api/feedback/: route.ts
hb-portal/app/badges/: page.tsx
hb-portal/app/help/: page.tsx
hb-portal/app/messages/: page.tsx
hb-portal/app/progress/: page.tsx
hb-portal/app/quests/: page.tsx
hb-portal/app/schedule/: page.tsx
hb-portal/app/uploads/: page.tsx
hb-portal/components/: Providers.tsx  dashboard-shell.tsx  global-nav.tsx  logo.tsx  turnstile.tsx
hb-portal/components/auth/: LoginCard.tsx
hb-portal/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  table.tsx  textarea.tsx
hb-portal/docs/: GODADDY-DNS.md  PORTAL-README.md  SECURITY.md
hb-portal/lib/: audit.ts  live-location.ts  rate-limit.ts  rbac.ts  storage.ts  turnstile.ts  utils.ts
hb-portal/lib/auth/: options.ts  roles.ts
hb-portal/lib/email/: magic-link.ts
hb-portal/prisma/: schema.prisma  seed.ts
hb-portal/public/favicons/: README.md
hb-portal/styles/: globals.css
hb-portal/tests/: rbac.test.ts
hb-portal/types/: next-auth.d.ts
ops/: README-deploy.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
ops/dockerfiles/: backend.Dockerfile  frontend.Dockerfile
ops/nginx/: frontend.conf
scripts/: setup_node_intel.sh
streamlit_app/: app.py
(+17 files in other folders)
