[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hawker-boys-tms"
version = "0.1.0"
description = "Training Management System backend for Hawker Boys"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{name = "Hawker Boys"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI"
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "loguru>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "black>=24.2.0",
    "mypy>=1.8.0"
]

[tool.setuptools.packages.find]
where = ["tms"]
