[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hawker-boys-tms"
version = "0.1.0"
description = "Training Management System for Hawker Boys"
authors = [{ name = "Hawker Boys", email = "ops@hawkerboys.example" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.12",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    "redis>=5.0.1",
    "rq>=1.15.1",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    "structlog>=23.2.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "cryptography>=42.0.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "black>=24.3.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "S", "DTZ", "N", "C4", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
