[metadata]
name = hawker-boys-tms
version = 0.1.0
description = Training Management System for Hawker Boys
license = MIT

[options]
packages = find:
package_dir =
    =.
include_package_data = True
install_requires =
    fastapi
    uvicorn[standard]
    sqlalchemy
    alembic
    psycopg[binary]
    pydantic
    pydantic-settings
    python-jose[cryptography]
    passlib[bcrypt]
    bcrypt
    redis
    rq
    httpx
    tenacity
    structlog
    python-multipart
    email-validator
    cryptography

[options.packages.find]
where = .
